# youtube-mcp

./: .gitignore  Dockerfile  README.md  main.py  main_2.py  pyproject.toml  requirements.txt  run.sh  setup.py  smithery.json  smithery.yaml
